--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,5 +1,6 @@
 <div id="educacion" class="card border-dark mb-3" style="max-width: 80rem">
-    <div id="edu-plus" *ngIf="AuthService.usuarioLogueado">
+    
+  <div id="edu-plus" *ngIf="AuthService.usuarioLogueado">
       <button
         class="betene btn1 hover"
         data-bs-toggle="modal"
@@ -9,7 +10,7 @@
       </button>
     </div>
   
-    <div id="educacion-text" class="card-body text-dark">
+    <div class="card-body text-dark title-box-text">
       <h4 id="scrollspyHeadingEdu" class="card-title-title">Educación:</h4>
       <div>
 
@@ -50,7 +51,7 @@
           </li>
         </ul>
   
-</div>  
+      </div>  
 
 <!-- MODAL -->
 <!-- Modal -->
