--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -19,11 +19,10 @@
     <i class="fas fa-pencil-alt"></i>
   </button>
   
-  <div id="acerca-de-text" class="card-body text-dark">
+  <div class="card-body text-dark title-box-text">
     <h4 id="scrollspyHeadingAcercaDe" class="card-title-title">Acerca de:</h4>
     <p class="card-text">{{ acercadeInfo.description }}</p>
-  </div>
-</div>
+
 
 
 <!-- MODAL DEL EDIT -->
