--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -11,14 +11,15 @@
     </button>
   </div>
 
-  <div id="exp-text" class="card-body text-dark">
+  <div class="card-body text-dark title-box-text">
     <h4 id="scrollspyHeadingExp" class="card-title-title">Experiencia:</h4>
     <div>
-      <ul id="education-list" *ngFor="let item of experienciaInfo; let i = index">
+      <ul
+        id="education-list"
+        *ngFor="let item of experienciaInfo; let i = index"
+      >
         <li>
-      
           <div id="exp-delete-edit" *ngIf="AuthService.usuarioLogueado">
-
             <button class="betene btn1 hover">
               <fa-icon
                 [icon]="faTimes"
@@ -27,15 +28,16 @@
               ></fa-icon>
             </button>
 
-            <button class="betene btn1 hover"
-            data-bs-toggle="modal"
-            data-bs-target="#expEditModal"
-            (click)="onSelectEdit(i)"
+            <button
+              class="betene btn1 hover"
+              data-bs-toggle="modal"
+              data-bs-target="#expEditModal"
+              (click)="onSelectEdit(i)"
             >
               <i class="fas fa-pencil-alt"></i>
             </button>
           </div>
-      
+
           <img
             [src]="item.img"
             id="salud-icon"
@@ -53,171 +55,178 @@
           </div>
         </li>
       </ul>
-      
     </div>
-  </div>
-</div>
 
-<!-- MODAL -->
-<!-- Modal -->
-<div
-  class="modal fade"
-  id="experienciaModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel1"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel1">
-          Agregue su nueva experiencia laboral:
-        </h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
+    <!-- MODAL -->
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="experienciaModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="exampleModalLabel1">
+              Agregue su nueva experiencia laboral:
+            </h3>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
 
-      <div class="modal-body">
-        <!-- Cuerpo dentro del modal -->
+          <div class="modal-body">
+            <!-- Cuerpo dentro del modal -->
 
-        <h5 class="modal-title" id="exampleModalLabel1">Empresa:</h5>
-        <div class="input-group">
-          <input
-            type="text"
-            name="title"
-            id="title"
-            [(ngModel)]="newExp.title"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
+            <h5 class="modal-title" id="exampleModalLabel1">Empresa:</h5>
+            <div class="input-group">
+              <input
+                type="text"
+                name="title"
+                id="title"
+                [(ngModel)]="newExp.title"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+            <br />
+            <h5 class="modal-title" id="exampleModalLabel1">Puesto:</h5>
+            <br />
+            <div class="input-group">
+              <input
+                type="text"
+                name="description"
+                id="description"
+                [(ngModel)]="newExp.description"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+            <br />
+            <h5 class="modal-title" id="exampleModalLabel1">Inicio - Final:</h5>
+            <div class="input-group">
+              <input
+                type="text"
+                name="time"
+                id="time"
+                [(ngModel)]="newExp.time"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              (click)="addExperiencia(newExp)"
+              class="btn btn-success"
+              data-bs-dismiss="modal"
+            >
+              Add
+            </button>
+          </div>
         </div>
-        <br />
-        <h5 class="modal-title" id="exampleModalLabel1">Puesto:</h5>
-        <br />
-        <div class="input-group">
-          <input
-            type="text"
-            name="description"
-            id="description"
-            [(ngModel)]="newExp.description"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
-        </div>
-        <br />
-        <h5 class="modal-title" id="exampleModalLabel1">Inicio - Final:</h5>
-        <div class="input-group">
-          <input
-            type="text"
-            name="time"
-            id="time"
-            [(ngModel)]="newExp.time"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
-        </div>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button
-          type="button"
-          (click)="addExperiencia(newExp)"
-          class="btn btn-success"
-          data-bs-dismiss="modal"
-        >
-          Add
-        </button>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- MODAL DEL EDIT -->
-<!-- Modal -->
-<div
-  class="modal fade"
-  id="expEditModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel2"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel2">
-          Edite su experiencia laboral:
-        </h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
+    <!-- MODAL DEL EDIT -->
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="expEditModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel2"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="exampleModalLabel1">
+              Edite su experiencia laboral:
+            </h3>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
 
-      <div class="modal-body">
-        <!-- Cuerpo dentro del modal -->
+          <div class="modal-body">
+            <!-- Cuerpo dentro del modal -->
 
-        <h5 class="modal-title" id="exampleModalLabel2">Empresa:</h5>
-        <div class="input-group">
-          <input
-            type="text"
-            name="title"
-            id="title"
-            *ngIf="expSelected"
-            [(ngModel)]="expSelected.title"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
+            <h5 class="modal-title" id="exampleModalLabel1">Empresa:</h5>
+            <div class="input-group">
+              <input
+                type="text"
+                name="title"
+                id="title"
+                *ngIf="expSelected"
+                [(ngModel)]="expSelected.title"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+            <br />
+            <h5 class="modal-title" id="exampleModalLabel1">Puesto:</h5>
+            <br />
+            <div class="input-group">
+              <input
+                type="text"
+                name="description"
+                id="description"
+                *ngIf="expSelected"
+                [(ngModel)]="expSelected.description"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+            <br />
+            <h5 class="modal-title" id="exampleModalLabel1">Inicio - Final:</h5>
+            <div class="input-group">
+              <input
+                type="text"
+                name="time"
+                id="time"
+                *ngIf="expSelected"
+                [(ngModel)]="expSelected.time"
+                class="form-control"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              (click)="onUpdate()"
+              class="btn btn-success"
+              data-bs-dismiss="modal"
+            >
+              Save
+            </button>
+          </div>
         </div>
-        <br />
-        <h5 class="modal-title" id="exampleModalLabel2">Puesto:</h5>
-        <br />
-        <div class="input-group">
-          <input
-            type="text"
-            name="description"
-            id="description"
-            *ngIf="expSelected"
-            [(ngModel)]="expSelected.description"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
-        </div>
-        <br />
-        <h5 class="modal-title" id="exampleModalLabel2">Inicio - Final:</h5>
-        <div class="input-group">
-          <input
-            type="text"
-            name="time"
-            id="time"
-            *ngIf="expSelected"
-            [(ngModel)]="expSelected.time"
-            class="form-control"
-            aria-describedby="basic-addon1"
-          />
-        </div>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button
-          type="button"
-          (click)="onUpdate()"
-          class="btn btn-success"
-          data-bs-dismiss="modal"
-        >
-          Save
-        </button>
       </div>
     </div>
   </div>
