--- a/src/styles.css
+++ b/src/styles.css
@@ -80,17 +80,13 @@
     position: relative;
 }
 
-#acerca-de-text{
-    font-family: "Poppins", sans-serif; 
+
+
+.title-box-text{
+    font-family: "Poppins", sans-serif !important; 
 }
 
-#educacion-text{
-    font-family: "Poppins", sans-serif; 
-}
 
-#exp-text{
-    font-family: "Poppins", sans-serif; 
-}
 
 
 #plus{
