--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -6,7 +6,7 @@
       <h1>Formulario de contacto</h1>
       <h3>¡Envíame un mail y estaremos en contacto!</h3>
 
-      <form action="/src/send.php" method="POST">
+      <form>
         <p>
           <label for="nombre" class="colocar_nombre"
             >Nombre
