--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -51,6 +51,7 @@
         </li>
       </ul>
       <form class="d-flex gap-2">
+
         <div
           id="mail-icon"
           class="collapse navbar-collapse"
@@ -58,8 +59,7 @@
         >
           <a
             type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#mailContactModal"
+            href="mailto:lautiibogado@gmail.com?Subject=Contacto%20desde%20el%20Portfolio"
             class="betene btn1 hover"
             ><i class="far fa-envelope"></i
           ></a>
