--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -4,12 +4,13 @@
   data-bs-spy="scroll"
   data-bs-target="#navbar-example2"
   data-bs-offset="0"
-  id="acerca-de"
-  class="card border-dark mb-3 scrollspy-example"
+  class="card border-dark mb-3 scrollspy-example seccion-info"
   tabindex="0"
   style="max-width: 80rem"
 >
-  <button
+
+<div id="about-edit">
+<button
   data-bs-toggle="modal"
   data-bs-target="#acercaDeEditModal"
     id="edit"
@@ -18,6 +19,7 @@
   >
     <i class="fas fa-pencil-alt"></i>
   </button>
+</div>
   
   <div class="card-body text-dark title-box-text">
     <h4 id="scrollspyHeadingAcercaDe" class="card-title-title">Acerca de:</h4>
