--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -53,8 +53,7 @@
       <form class="d-flex gap-2">
 
         <div
-          id="mail-icon"
-          class="collapse navbar-collapse"
+          class="collapse navbar-collapse icono-redes"
           id="navbarTogglerDemo01"
         >
           <a
@@ -66,8 +65,7 @@
         </div>
 
         <div
-          id="linkedin-icon"
-          class="collapse navbar-collapse"
+          class="collapse navbar-collapse icono-redes"
           id="navbarTogglerDemo01"
         >
           <a
@@ -78,8 +76,7 @@
         </div>
         
         <div
-          id="wpp-icon"
-          class="collapse navbar-collapse"
+          class="collapse navbar-collapse icono-redes"
           id="navbarTogglerDemo01"
         >
           <a href="https://wa.me/5493624104545" class="betene btn1 hover"
@@ -124,7 +121,7 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="exampleModalLabel">Iniciar Sesión</h3>
