--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,6 +1,5 @@
 <div
-  id="skills"
-  class="card border-dark mb-3 contiene-progres"
+  class="card border-dark mb-3 contiene-progres seccion-info"
   style="max-width: 80rem"
 >
   <h4 id="scrollspyHeadingSkills" class="title title-box-text">Hard & Soft Skills:</h4>
