--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<div id="educacion" class="card border-dark mb-3" style="max-width: 80rem">
+<div class="card border-dark mb-3 seccion-info" style="max-width: 80rem">
     
   <div id="edu-plus" *ngIf="AuthService.usuarioLogueado">
       <button
@@ -32,10 +32,10 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </div>
-  
+   <!-- revisar estas imagenes que tenian un margin con este id que borre -->
             <img
               [src]="item.img"
-              id="school-icon"
+              id="school-icon"  
               class="rounded float-start"
               alt="img"
               width="75px"
