--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,6 +1,6 @@
 <!-- EXPERIENCIA -->
 
-<div id="experiencia" class="card border-dark mb-3" style="max-width: 80rem">
+<div class="card border-dark mb-3 seccion-info" style="max-width: 80rem">
   <div id="exp-plus" *ngIf="AuthService.usuarioLogueado">
     <button
       class="betene btn1 hover"
@@ -66,7 +66,7 @@
       aria-labelledby="exampleModalLabel1"
       aria-hidden="true"
     >
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h3 class="modal-title" id="exampleModalLabel1">
