--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
           class="rounded float-start"
           alt="img de perfil"
         />
-        <div id="hd-edit" *ngIf="AuthService.usuarioLogueado">
+        <div id="hd-edit" *ngIf="usuarioLogueado">
           <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
         </div>      
       </div>
