--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -4,7 +4,7 @@
 >
   <h4 id="scrollspyHeadingSkills" class="title title-box-text">Hard & Soft Skills:</h4>
 
-  <div id="sk-edit" *ngIf="AuthService.usuarioLogueado">
+  <div id="sk-edit" *ngIf="usuarioLogueado">
     <button
       class="betene btn1 hover"
       data-bs-toggle="modal"
@@ -14,7 +14,7 @@
     </button>
   </div>
 
-  <div id="sk-plus" *ngIf="AuthService.usuarioLogueado">
+  <div id="sk-plus" *ngIf="usuarioLogueado">
     <button 
     class="betene btn1 hover"
     data-bs-toggle="modal"
