items centrados y delete working

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -32,11 +32,11 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </div>
-   <!-- revisar estas imagenes que tenian un margin con este id que borre -->
+
+            <div class="container-item">
             <img
               [src]="item.img"
-              id="school-icon"  
-              class="rounded float-start"
+              class="rounded float-start mini-icon"
               alt="img"
               width="75px"
               height="75px"
@@ -47,6 +47,7 @@
               </div>
               <p class="mb-1">{{ item.title }}</p>
               <small class="text-muted">{{ item.description }}</small>
+            </div>
             </div>
           </li>
         </ul>
