--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -38,13 +38,11 @@
             </button>
           </div>
 
+          <div class="container-item">
           <img
             [src]="item.img"
-            id="salud-icon"
-            class="rounded float-start"
-            alt="school"
-            width="70px"
-            height="70px"
+            class="rounded float-start mini-icon"
+            alt="icono generico"
           />
           <div class="list-group">
             <div class="d-flex w-100 justify-content-between">
@@ -53,6 +51,7 @@
             <p class="mb-1">{{ item.title }}</p>
             <small class="text-muted">{{ item.description }}</small>
           </div>
+        </div>
         </li>
       </ul>
     </div>
