--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -9,6 +9,7 @@
       class="betene btn1 hover"
       data-bs-toggle="modal"
       data-bs-target="#skillEditModal"
+
     >
       <i class="fas fa-pencil-alt"></i>
     </button>
@@ -124,7 +125,7 @@
       </div>
 
       <div class="modal-footer title-box-text">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button  (click)="onUpdate()" type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Close
         </button>
         <button type="button" class="btn btn-success" data-bs-dismiss="modal">
